:recycle: add changefreq to sitemap

--- a/config.toml
+++ b/config.toml
@@ -38,3 +38,7 @@ BookEditPath = 'edit/main'
 
 [markup.goldmark.renderer]
 unsafe = true
+
+[sitemap]
+  changefreq = 'weekly'
+  filename = 'sitemap.xml'
